# changepoynt

./: .gitignore  LICENSE  MANIFEST.in  README.md  extract_and_publish_version.sh  pyproject.toml  rename_version.sh  requirements.txt  requirements_examples  requirements_examples.txt  requirements_tests.txt  setup.py  small_text.py
.github/workflows/: docs.yml  test_pypi.yml  tests.yml
changepoynt/: __init__.py
changepoynt/algorithms/: base_algorithm.py  baseline.py  bocpd.py  clasp.py  esst.py  floss.py  fluss.py  messt.py  msst.py  rulsif.py  si.py  sst.py  ulsif.py
changepoynt/evaluation/: metrics.py
changepoynt/simulation/: __init__.py  base.py  errors.py  generator.py  noises.py  oscillations.py  randomizers.py  serialization.py  signals.py  transitions.py  trends.py
changepoynt/simulator/: base.py  noises.py  oscillations.py  trends.py
changepoynt/utils/: block_linalg.py  densityratioestimation.py  densratios.py  fastHankel.py  linalg.py  normalization.py
changepoynt/visualization/: score_plotting.py
docs/: FAQ.md  algorithms.md  contributing.md  fast-sst.md  index.md  installation.md  mkdocs.yml  quickstart.md  subspace-guide.md
docs/algorithms/: bocpd.md  clasp.md  esst.md  floss.md  fluss.md  messt.md  moving-window.md  msst.md  rulsif.md  sst.md  subspace-identification.md  tesst.md  ulsif.md  zero.md
docs/api/: algorithms.md  index.md  utils.md  visualization.md
docs/guides/: experimental-buffered-streaming.md  index.md  tuning-subspace-methods.md  visualizing-scores.md
docs/overrides/: main.html
examples/: FastHankelSpeed.ipynb  buffered_streaming_comparison.py  compare_implementation.py  logwell.mat  minimalExample.py  minimalExampleHankel.py  simulateSignals.py  sst_ika_vs_svd.ipynb
frontend/: Dockerfile  SimulatorDemo.py  app.py  example.csv  exampleExtension.py
scripts/: documentation_manual.md  rename_version.sh  update_version_manual.txt
src/changepoynt/algorithms/: torch_esst.py
tests/: test_baseline.py  test_block_linalg.py  test_bocpd.py  test_clasp.py  test_esst.py  test_floss.py  test_fluss.py  test_linalg.py  test_messt.py  test_msst.py  test_rulsif.py  test_si.py  test_simulation.py  test_sst.py  test_ulsif.py
