[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "changepoynt"
version = "0.0.8"
authors = [
  { name="Lucas Weber", email="weber-lucas@web.de" },
]
description = "Efficient and readable change point detection package implemented in Python. (Singular Spectrum Transformation - SST, IKA-SST, ulSIF, RuLSIF, KLIEP, FLUSS, FLOSS, etc.)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License-Expression :: OSI Approved :: BSD-2-Clause",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
license = {file = "LICENSE"}
keywords = ['changepoint', 'times eries', 'engineering', 'SST', 'change point detection', 'CPD']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {test = { file = ["requirements_tests.txt"] }, example = { file = ["requirements_examples.txt"] }}

[project.urls]
Homepage = "https://github.com/Lucew/changepoynt"
Issues = "https://github.com/Lucew/changepoynt/issues"

[tool.setuptools]
packages = ["changepoynt", "changepoynt.algorithms", "changepoynt.utils", "changepoynt.visualization"]